--- a/gfy.html
+++ b/gfy.html
@@ -10,14 +10,11 @@
       <meta data-react-helmet="true" name="description" content=""/>
       <meta data-react-helmet="true" name="keywords" content="gif, animated"/>
       <meta data-react-helmet="true" name="twitter:card" content="player"/>
-      <meta data-react-helmet="true" name="twitter:title" content="{{.GifTitle}} | Zif"/>
       <meta data-react-helmet="true" name="twitter:url" content="/ifr/{{.GifID}}"/>
       <meta data-react-helmet="true" name="twitter:image" content="/gifs/{{.GifID}}-size_restricted.gif"/>
       <meta data-react-helmet="true" name="twitter:image:src" content="/gifs/{{.GifID}}-size_restricted.gif"/>
       <meta data-react-helmet="true" name="twitter:player" content="/ifr/{{.GifID}}"/>
-      <meta data-react-helmet="true" name="twitter:player:width" content="1268"/>
-      <meta data-react-helmet="true" name="twitter:player:height" content="1866"/>
-      <meta data-react-helmet="true" name="twitter:description" content="Watch and share {{.GifTitle}} GIFs on Zif"/>
+      <meta data-react-helmet="true" name="twitter:card" content="summary_large_image">
       <link data-react-helmet="true" rel="shortcut icon" type="image/x-icon" href="/assets/favicons/favicon.ico"/>
       <link data-react-helmet="true" rel="search" type="application/opensearchdescription+xml" title="Zif" href="/assets/opensearch.xml"/>
       <link data-react-helmet="true" rel="manifest" href="/assets/manifest.json"/>
